2005-05-18  johnsu01  <john@wjsullivan.net>

	* planner-delicious.el (planner-delicious-insert-posts): Copied
	some sanity checks from planner-diary.el to make sure we're not
	mangling an innocent buffer.
	(planner-delicious-insert-posts-all): New interactive command to
	insert posts matching all of a list of tags, and optionally a
	date.
	(planner-delicious-insert-posts-any): New interactive command to
	insert posts matching any of a list of tags, and optionally a
	date.
	(planner-delicious-insert-posts): Added safety check to throw an
	error when you try to match a tag you have never used before,
	until I understand the bug. Without this, emacs was locking up in
	this case.

2005-05-12  John Sullivan  <john@wjsullivan.net>

	* delicioapi.el (delicious-api-get-timestamp): Use existing
	XML-parsing functions instead of a special one for
	timestamp. Function now returns a time value.

	* delicioapi.el (delicious-api-parse-timestamp): Deleted, since
	we're using the existing XML-parsing functions.
	
2005-05-10  John Sullivan  <john@wjsullivan.net>

	* delicioapi.el (delicious-api-parse-timestamp): New function.
	(delicious-api-get-timestamp): New function to make the API call
	to get the timestamp of the last update from the server.

	* delicious.el (delicious-build-posts-list): Added "Done" message.

2005-05-08  johnsu01  <john@wjsullivan.net>

	* delicious.el (delicious-guess-url): Fixed bug caused by recent
	changes in url guessing that required something to be in the
	clipboard before posting. 

2005-05-06  John Sullivan  <john@wjsullivan.net>

	* delicious.el (delicious-get-posts-from-stored): Added new
	argument TAG-MATCH-TYPE. Instead of filtering posts by a regexp
	for tags, the user can now specify whether they want posts with
	all of the tags, or with any of the tags. Broke filtering logic
	into separate functions.
	(delicious-test-tag-all): New function to test whether a post has
	all of the given tags.