@@ -1,3 +1,9 @@
+2005-06-05  johnsu01  <john@wjsullivan.net>
+
+	* delicioapi.el (delicious-send-request): Fixed error checking so
+	that it doesn't lie and say everything is fine when there is a 503
+	error. Some line length cleanups.
+
 2005-05-18  johnsu01  <john@wjsullivan.net>
 
 	* planner-delicious.el (planner-delicious-insert-posts): Copied
